gke-devsecops-survival-kit/k8s/network-policy/deny-egress-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: default
  labels:
    # TODO: scope to lab namespace only
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress: []
